# GLPG

./: .gitignore  CMakeLists.txt  gl-101.sln  meson.build  meson_options.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/helloandroid/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
d3d11/: 01_clear_color.cpp  02_triangle.cpp  03_model_matrix.cpp  03_model_matrix_vs.hlsl  04_index_buffer.cpp  05_instanced_draw.cpp  06_camera_matrix.cpp  06_camera_matrix_vs.hlsl  07_projection_matrix.cpp  07_projection_matrix_vs.hlsl  08_3dprojection.cpp  d3d11_101.cpp  meson.build  pixelShader.hlsl
d3d11/shaders/: 03_model_matrix_vs.hlsl  05_instanced_draw_ps.hlsl  05_instanced_draw_vs.hlsl  06_camera_matrix_vs.hlsl  07_projection_matrix_vs.hlsl  09_texture_ps.hlsl  09_texture_vs.hlsl
d3d12/: 01_clear_color.cpp  02_triangle.cpp  CMakeLists.txt  d3d12_101.cpp  meson.build
d3d12/shaders/: 02_triangle_vs.hlsl
d3d2/: CMakeLists.txt  meson.build  test.cpp  test_d3d2.cpp
d3d7/: CMakeLists.txt  meson.build  test.cpp  test_d3d7.cpp
d3d8/: 01_clear_color.cpp  02_hello_triangle.cpp  CMakeLists.txt  d3d8_test.cpp  meson.build
d3d9/: CMakeLists.txt  meson.build  test.cpp
downscaler/: 4.ppm  CMakeLists.txt  downscaler.cpp  downscaler.hpp  downscaler_decoder.cpp  downscaler_decoder.hpp  downscaler_utils.cpp  downscaler_utils.hpp  lanczos_upscale.glsl  logs_3.ppm  test
examples/: 01_hello_triangle.cpp  01b_hello_coloured_triangle.cpp  02_model_matrix.cpp  03_element_array_buffer.cpp  04_camera_matrix.cpp  05_projection_matrix.cpp  05_projection_matrix_glm.cpp  06_monkey.cpp  06_monkey_indexed.cpp  07_monkey_circle.cpp  07_threaded_update.cpp  07_triangle_texture.cpp  08_camera_movement.cpp  08_cube_texture.cpp  08_monkey_circle.cpp  09_monkey_indexed.cpp  09_text_rendering.cpp  09a_render_to_texture.cpp  10_normal_lighting.cpp  10_threaded_update.cpp  11_camera_movement.cpp  CMakeLists.txt  meson.build
gl/: 02_model_matrix.cpp  03_element_array_buffer.cpp  06_monkey_indexed.cpp  08_camera_movement.cpp  08_cube_texture.cpp  CMakeLists.txt
gl-101/: context.h  gl-101.vcxproj  gl-101.vcxproj.filters  loader.h  main.cpp  shader.h  tax_smh.txt  timer.hpp  triangle.cpp  triangle.hpp  vertex.vs
gl-101/utils/math/: includes.hpp  template_math_ops.hpp  template_matrix.hpp  template_vector.hpp
include/: GLPGCamera.hpp  GLPGContext.hpp  GLPGD3D11Context.hpp  GLPGD3D12Context.hpp  GLPGD3D8Context.hpp  GLPGD3D9Context.hpp  GLPGEvent.hpp  GLPGEvent_Enums.hpp  GLPGWindow.hpp  native_window.hpp  opengl_context.hpp
include/internal/: GLPGContextImpl.hpp  GLPGContextImpl_GL.hpp  GLPGContextImpl_Platform.hpp  GLPGContextImpl_Platform_EGL.hpp  GLPGContextImpl_Platform_WGL.hpp  GLPGEventImpl.hpp  GLPGEventImpl_Win32.hpp  GLPGEventImpl_Xcb.hpp  GLPGWindowImpl.hpp  GLPGWindowImpl_Win32.hpp  GLPGWindowImpl_Xcb.hpp
include/math/: GLPGMath.hpp  GLPGMatrix.hpp  GLPGVector.hpp  glpg_math.hpp  glpg_matrix.hpp  glpg_vector.hpp
include/utils/: GLPGD3DUtils.hpp  GLPGShaderUtils.hpp  GLPGUtils.hpp  misc_utils.hpp  native_window.hpp  opengl_context.hpp  opengl_loader.hpp  opengl_shader_utils.hpp  vk-print.hpp  vk-utils.hpp
include/utils/math/: includes.hpp  template_math_ops.hpp  template_matrix.hpp  template_vector.hpp
scripts/: rdc_parser.py
sdk/GL/: glext.h
src/: CMakeLists.txt  GLPGContext.cpp  GLPGContextImpl_GL_EGL.cpp  GLPGContextImpl_GL_WGL.cpp  GLPGContextImpl_Platform_EGL.cpp  GLPGContextImpl_Platform_WGL.cpp  GLPGContext_GL.cpp  GLPGContext_GL_WGL.cpp  GLPGD3D11Context.cpp  GLPGD3D12Context.cpp  GLPGD3D8Context.cpp  GLPGD3D9Context.cpp  GLPGEvent.cpp  GLPGEventImpl_Win32.cpp  GLPGEventImpl_Xcb.cpp  GLPGEvent_Win32.cpp  GLPGEvent_Xcb.cpp  GLPGShaderUtils.cpp  GLPGWindow.cpp  GLPGWindowImpl_Win32.cpp  GLPGWindowImpl_Xcb.cpp  GLPGWindow_Win32.cpp  GLPGWindow_Xcb.cpp  egl_test.cpp  hello_triangle.cpp  meson.build  native_window.cpp  opengl_context.cpp  opengl_shader_utils.cpp
tests/: glpg_vector_tests.cpp  gtest_mock.cpp  meson.build
vulkan/: 01_clear_color.cpp  01_triangle.cpp  02_hello_triangle.cpp  meson.build  vk_101.cpp
vulkan/shaders/: 02_triangle_fs.glsl  02_triangle_vs.glsl
