executable('01_hello_triangle', '01_hello_triangle.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('02_model_matrix', '02_model_matrix.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('03_element_array_buffer', '03_element_array_buffer.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('04_camera_matrix', '04_camera_matrix.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('05_projection_matrix', '05_projection_matrix.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('06_monkey', '06_monkey.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('07_monkey_circle', '07_monkey_circle.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('08_monkey_circle', '08_monkey_circle.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('09_monkey_indexed', '09_monkey_indexed.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)

executable('10_threaded_update', '10_threaded_update.cpp',
           include_directories : glpg_include_path,
           dependencies : deps,
           link_with : libglpg)