executable('01_hello_triangle', '01_hello_triangle.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('02_model_matrix', '02_model_matrix.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('03_element_array_buffer', '03_element_array_buffer.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('04_camera_matrix', '04_camera_matrix.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('05_projection_matrix', '05_projection_matrix.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('06_monkey', '06_monkey.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('07_monkey_circle', '07_monkey_circle.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('12_text_rendering', '12_text_rendering.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

