executable('01_hello_triangle', '01_hello_triangle.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('01b_hello_coloured_triangle', '01b_hello_coloured_triangle.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('02_model_matrix', '02_model_matrix.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('03_element_array_buffer', '03_element_array_buffer.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('04_camera_matrix', '04_camera_matrix.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('05_projection_matrix', '05_projection_matrix.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('06_monkey_indexed', '06_monkey_indexed.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)

executable('07_triangle_texture', '07_triangle_texture.cpp',
           include_directories : glpg_include_path,
           link_with : libglpg)
